# Genesis-AI-Agent

./: .gitignore  README.md  render.yaml
genesis/.github/workflows/: ci-cd.yml
genesis/backend/: main.py  pyproject.toml  requirements.txt
genesis/backend/agents/: execution_tier.py  forge_agent.py  intelligence_tier.py  quality_tier.py  strategic_tier.py
genesis/backend/core/: memory.py  orchestrator.py
genesis/docs/: C4_ARCHITECTURE.md  EXECUTIVE_SUMMARY.md
genesis/frontend/: index.html
genesis/frontend/src/: App.jsx  index.css
genesis/infra/: docker-compose.yaml
genesis/infra/k8s/: deployment.yaml
genesis/infra/terraform/: main.tf
inventory-bot/core/: distillation.py  neurosymbolic.py  yolo_vlm_pipeline.py
inventory-bot/docs/: C4_ARCHITECTURE.md
inventory-bot/infra/: k3s-deployment.yaml
